--- a/css/style.css
+++ b/css/style.css
@@ -91,18 +91,14 @@ body{
     display: flex;
     flex-wrap: wrap;
     padding: 25px 0;
-    margin: 0 auto 75px auto ;
-
+    margin: 0 auto 75px auto ; 
+    position:relative;
 }
 
 .cont-img{
     width: calc((100% - 30px)/3);
     margin: 100px 5px 0 5px;
     position: relative;
-}
-
-.back{
-    display: none;
 }
 
 .descr ul li{
@@ -174,19 +170,20 @@ body{
     left: 0%;
 }
 
-.front{
-    z-index: 1;
-}
-
-.back:hover{
+.img1{
     display: block;
 }
 
-.front:hover{
+.img2{
     display: none;
-    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
+.cont-img:hover .img2{
+    display: block;
+}
 /* footer */
 footer{
     background-color: #1A1A1A;
@@ -220,6 +217,7 @@ footer{
     padding: 5px;
 }
 
-.foot-title{
-    text-align: right;
+.foot-title, .icon-social{
+    text-align: center;
 }
+
