--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body{
     display: flex;
     width: 80%;
     margin: 0 auto;
+    justify-content: space-between;
 }
 
 .sex-selector ul,
@@ -55,15 +56,15 @@ body{
     width: 20%;
     display: flex;
     align-items: center;
-    justify-content: center;
 }
 
 .logo{
     width: 60%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex;
     padding: 0 10px;
+    justify-content: center;
 }
 
 .logo img{
@@ -87,7 +88,7 @@ body{
 /* main */
 
 .container{
-    width: 75%;
+    width: 80%;
     display: flex;
     flex-wrap: wrap;
     padding: 25px 0;
@@ -195,10 +196,11 @@ footer{
     display: flex;
     width: 80%;
     margin: 0 auto;
+    justify-content: space-between;
 }
 
 .info{
-    width: 70%;
+    width: 85%;
 }
 
 .info h2{
@@ -210,14 +212,21 @@ footer{
 }
 
 .social{
-    width: 30%;
+    width: 15%;
+    display: flex;
+    flex-direction: column;
+    line-height: 30px;
 }
 
 .icon-social{
     padding: 5px;
 }
 
-.foot-title, .icon-social{
-    text-align: center;
+.foot-title{
+    text-align: right;
+    padding: 0 13px;
 }
 
+.cont-ico-social{
+    text-align: right;
+}
