--- a/css/style.css
+++ b/css/style.css
@@ -22,24 +22,23 @@ body{
     margin: 0 auto;
     position: fixed;
     box-shadow: 10px 2px 2px  #424242;
-    z-index: 2;
+    z-index: 1;
 }
 
 .cont-head{
     display: flex;
     width: 80%;
     margin: 0 auto;
-    justify-content: space-between;
 }
 
 .sex-selector ul,
 .foot-text ul {
-    display: flex;
+    list-style: none;
 }
 
 .sex-selector ul li,
 .foot-text ul li {
-    list-style: none;
+    display: inline;
 }
 
 .sex-selector ul li a,
@@ -62,7 +61,6 @@ body{
     width: 60%;
     display: flex;
     align-items: center;
-    justify-content: flex;
     padding: 0 10px;
     justify-content: center;
 }
@@ -74,10 +72,11 @@ body{
 
 .menu{
     text-align: right;
-    width: 20%;
     padding: 0 10px;
     display: flex;
     align-items: center;
+    width: 20%;
+    justify-content: flex-end;
 }
 
 .icon {
@@ -143,6 +142,10 @@ body{
     text-align: center;
 }
 
+.heart:hover{
+    color: red;
+}
+
 .discount{
     font-weight: bold;
     color: white;
@@ -171,10 +174,6 @@ body{
     left: 0%;
 }
 
-.img1{
-    display: block;
-}
-
 .img2{
     display: none;
     position: absolute;
@@ -197,6 +196,7 @@ footer{
     width: 80%;
     margin: 0 auto;
     justify-content: space-between;
+    align-items: center;
 }
 
 .info{
